sonarqube-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar
  namespace: sonar
  labels:
    app: sonar
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
      - name: sonar
        image: sonarqube:8.9.1-community
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
          name: sonar
          protocol: TCP
        volumeMounts:
        - name: app-pvc
          mountPath: "/opt/sonarqube/data/"
          subPath: data
        - name: app-pvc
          mountPath: "/opt/sonarqube/extensions/"
          subPath: extensions
      tolerations: 
      - key: "sonarqube"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      nodeSelector: 
       sonarqube: "true"        
      volumes:
      - name: app-pvc
        persistentVolumeClaim:
          claimName: sonar-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: sonar
  namespace: sonar
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: sonar
  selector:
    app: sonar
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: sonar
  namespace: sonar
spec:
  tls:
  - hosts:
    - sonarqube.your-domain.com
#    secretName: obvious-cert
  rules:
  - host: sonarqube.your-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonar
            port: 
              number: 9000
